EMV8:  configurer les outils nécessaires (Maven, Tomcat, JDK, etc.) et definir architecture du projet